part2/src/errorMessage.txt
make -C /lib/modules/6.5.0-21-generic/build M=/home/gabriel/COP4610/COP4610_Proj2_Temp/part2/src modules
make[1]: Entering directory '/usr/src/linux-headers-6.5.0-21-generic'
warning: the compiler differs from the one used to build the kernel
  The kernel was built by: x86_64-linux-gnu-gcc-12 (Ubuntu 12.3.0-1ubuntu1~22.04) 12.3.0
  You are using:           gcc-12 (Ubuntu 12.3.0-1ubuntu1~22.04) 12.3.0
  CC [M]  /home/gabriel/COP4610/COP4610_Proj2_Temp/part2/src/my_timer.o
/home/gabriel/COP4610/COP4610_Proj2_Temp/part2/src/my_timer.c:78:21: error: expected declaration specifiers or ‘...’ before ‘&’ token
   78 | ktime_get_real_ts64(&time);
      |                     ^
/home/gabriel/COP4610/COP4610_Proj2_Temp/part2/src/my_timer.c:80:12: error: expected ‘)’ before ‘->’ token
   80 | printf(time->tv_sec);
      |            ^~
      |            )
make[3]: *** [scripts/Makefile.build:251: /home/gabriel/COP4610/COP4610_Proj2_Temp/part2/src/my_timer.o] Error 1
make[2]: *** [/usr/src/linux-headers-6.5.0-21-generic/Makefile:2039: /home/gabriel/COP4610/COP4610_Proj2_Temp/part2/src] Error 2
make[1]: *** [Makefile:234: __sub-make] Error 2
make[1]: Leaving directory '/usr/src/linux-headers-6.5.0-21-generic'
make: *** [Makefile:5: all] Error 2
